# Open_Duck_Mini_Runtime

./: .gitignore  BNO085_INTEGRATION.md  CLAUDE.md  HIWONDER_BOARD_COMMANDS.md  HIWONDER_BOARD_INTEGRATION_GUIDE.md  HIWONDER_INTEGRATION.md  HIWONDER_INTEGRATION_SUMMARY.md  HIWONDER_SETUP_GUIDE.txt  README.md  UV_SETUP.md  checklist.md  example_config_dual_imu.json  example_config_icm45686.json  plot_all_times.py  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
configs/: duck_config.json  icm45686_calib_data.pkl
docs/: DUAL_IMU_QUICKSTART.md  HIWONDER_SETUP_GUIDE.txt  ICM45686_CALIBRATION.md  ICM45686_INTEGRATION.md  ICM45686_QUICKSTART.md  MULTI_IMU_SETUP.md
docs/ICM45686/: icm45686.ino
mini_bdx_runtime/mini_bdx_runtime/: antennas.py  (+28 more)
scripts/: TEST.py  TMP_offsets_tests.py  antennas_controller_test.py  bench_com_time.py  bench_rustypot.py  bench_rustypot_control_loop.py  calibrate_icm45686.py  calibrate_imu.py  cam_test.py  check_bank_system.py  check_hiwonder_motors.py  check_voltage.py  configure_hiwonder_motor.py  configure_motor.py  debug_sensor_data_registers.py  determine_error_gain.py  diagnose_imu_0x68.py  diagnose_imu_direct.py  ear_servo_test.py  example_config.json  fc_test.py  find_hiwonder_offsets.py  find_sensor_registers.py  find_soft_offsets.py  full_scan_initialized.py  goto_init_position.py  head_puppet.py  head_stabilisation.py  i2c_imu_test.py  icm45686_test.py  imu_client.py  imu_client_raw.py  imu_server.py  imu_server_raw.py  imu_test.py  init_and_monitor.py  led_test.py  log_acc.py  move_all_motors.py  move_motor_to_zero.py  (+30 more)
(+605 files in other folders)
